--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <label for="cvc">CVC</label>
       <input type="text" id="cvc" name="cvc" placeholder="123" maxlength="4" required>
 
-      <button type="submit" class="submit-btn">Submit</button>
+      <button type="submit" class="submit-btn">pay £0</button>
 
        <div>
 <div style='font-size:1px; opacity:0;' style="float:right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
